# obj-observe

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
obj_observe/: core.py
py_observe/: __init__.py  core.py
tests/: test_basic.py
